add /people/role_attribute_sync endpoint
